--- a/150802_2021000004.html
+++ b/150802_2021000004.html
@@ -8,6 +8,6 @@
     <title>检测报告</title>
  </head>
   <body>
-<embed  id="img" src="img/150802-2021000004.pdf" width="100%">
+<iframe id="img" src="img/150802-2021000004.pdf" width="100%">
 </body>
 </html>
