--- a/150802_2021000004.html
+++ b/150802_2021000004.html
@@ -8,6 +8,6 @@
     <title>检测报告</title>
  </head>
   <body>
-<iframe id="img" src="img/150802-2021000004.pdf" width="100%" height="100%" scroll="no"> </iframe>
+<img id="img" src="img/150802-2021000004.jpg" width="100%">
 </body>
 </html>
