--- a/150802_2021000003.html
+++ b/150802_2021000003.html
@@ -8,6 +8,6 @@
     <title>检测报告</title>
  </head>
   <body>
-<img  id="img" src="img/150802-2021000003.png" width="100%">
+<img  id="img" src="img/150802-2021000003.jpg" width="100%">
 </body>
 </html>
